fix(styles): improve spacing with parent padding

--- a/src/features/Sidebar/Sidebar.module.css
+++ b/src/features/Sidebar/Sidebar.module.css
@@ -44,6 +44,7 @@
   gap: 10px;
   margin-bottom: 5px;
   transition: all 0.2s ease;
+  padding-left: 8px;
 }
 
 .addTask:hover {
@@ -55,7 +56,6 @@
 }
 
 .addTaskTitle {
-  margin-left: 8px;
   font-size: 20px;
   font-weight: 500;
   color: #fdad1c;
@@ -69,6 +69,7 @@
   transition: all 0.2s ease;
   border-radius: 8px;
   height: 35px;
+  padding: 0 8px 0 8px;
 }
 
 .projectsInfo {
@@ -92,15 +93,10 @@
   opacity: 1;
 }
 
-.left {
-  margin-left: 8px;
-}
-
 .right {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 8px;
 }
 
 .arrow {
